--- a/index.html
+++ b/index.html
@@ -77,48 +77,64 @@
                                     </h2>
                                     <p
                                         style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
-                                        E col natale si avvicina anche il nostro Meetup a tema Natalizio! Infatti come
-                                        prima cosa ti ricordo il nostro br <strong>Meetup Speciale su Base nazionale!
-                                        </strong>Non sai
-                                        cos’è? Nessun problema, ci penso io!</p>
+                                        E col natale si avvicina anche il nostro Meetup a tema Natalizio!</p>
+                                    <p
+                                        style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
+                                        Non sai cos’è? Nessun problema, ci penso io!</p>
+                                    <p
+                                        style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
+                                        <strong>Per il 18 Dicembre è previsto un meetup a tema natalizio</strong> che
+                                        ogni regione organizzerà in concomitanza con le altre! Saremo quindi tutti
+                                        insieme a festeggiare il Natale! 🎄 <br> Inoltre c’è anche un piccolo gioco, il
+                                        <strong>Secret Santa</strong>, un modo molto <em>ganzo</em> di augurarci il natale.
+                                    </p>
+
                                     <p
                                         style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300; margin-top: 5%;">
-                                        Per il 18 Dicembre è previsto un meetup a
-                                        tema natalizio che ogni regione organizzerà in concomitanza con le altre! Saremo
-                                        quindi tutti insieme a festeggiare il Natale! 🎄 <br> Inoltre c’è anche un
-                                        piccolo
-                                        gioco, il <strong>Secret Santa</strong>, che non è che un modo <em>ganzo</em> di
-                                        augurarci il natale,
-                                        Alessandro sul gruppo premium ha fatto un <a href="linkalpostfb">post a
+
+                                        Alessandro sul gruppo premium ha fatto un <a
+                                            href="https://www.facebook.com/groups/start2impact.premium.community/permalink/4755461304513660/">post
+                                            a
                                             riguardo</a>! Ti consiglio di
                                         andarlo a leggere! </p>
 
                                     <p
                                         style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
-                                        Non pensi che sia una figata? Ti va di partecipare? Ottimo! Allora qui puoi
-                                        trovare <a href="postgrupportoscana">il post con tutte le istruzioni</a> da
-                                        seguire per partecipare! Ah, ti
-                                        ricordo che puoi venire accompagnato! Se ti va puoi portare una persona con te
-                                        così da fargli vedere cosa si perde a non partecipare attivamente a start2impact
-                                        😌 <br> Sicuramente, oltre che a fare festa <em>(come sempre, ma sta volta di
-                                            più!)</em>, al
-                                        Meetup avremo modo di confrontarci! Non abbiamo ancora un tema preciso, quindi
-                                        se hai delle preferenze o ti va di proporre qualcosa fammelo sapere, qui per
-                                        mail o nei commenti del riassuntivo sul <a href="gruppotoscana">gruppo
-                                            regionale</a>! </p>
+                                        Ti va di partecipare? Ottimo!</p>
+
 
                                     <p
                                         style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
+                                        Allora qui puoi
+                                        trovare <a
+                                            href="https://www.facebook.com/groups/720819781768640/permalink/1305834613267151/">il
+                                            post con tutte le istruzioni</a> da
+                                        seguire per partecipare! <br> <br>
+                                        <em>Ah, ti ricordo che puoi venire accompagnato!</em> <br> <br> Se ti va puoi
+                                        portare una persona con te
+                                        così da fargli vedere cosa si perde a non partecipare attivamente a Start2Impact
+                                        😌 <br> <br> Sicuramente, oltre che a fare festa <em>(come sempre, ma sta volta
+                                            di
+                                            più!)</em>, al
+                                        Meetup avremo modo di confrontarci! <br> <br> Non abbiamo ancora un tema preciso, quindi
+                                        se hai delle preferenze o ti va di proporre qualcosa fammelo sapere, qui per
+                                        mail o nei commenti del post riassuntivo sul <a
+                                            href="https://www.facebook.com/groups/720819781768640">gruppo
+                                            regionale</a>!
+                                    </p>
 
+                                    <p
+                                        style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
                                         Ultima cosa: con tutta probabilità molti di noi rimarranno in quel di Firenze a
-                                        <strong>cena dopo il Meetup</strong>, e c’è nell’aria di fare anche un cenone
-                                        tutti insieme! Però
-                                        potremmo essere in tanti quindi credo sia il caso che io mi attivi per prenotare
-                                        un posticino top che ci possa ospitare! Per questo ho bisogno di sapere se
-                                        parteciperai o no, ti chiederò conferma dopo la scadenza delle iscrizioni al
-                                        Meetup, il 7 Dicembre! Se hai qualche domanda mi raccomando, non farti
-                                        problemi: rispondi pure a questa mail, chiedi nel gruppo Facebook oppure nel
-                                        <em>gruppo telegram!</em>
+                                        <strong>cena dopo il Meetup</strong> e c’è nell’aria di fare anche un cenone
+                                        tutti insieme! <br> <br> Però <strong>potremmo essere in tanti</strong>, quindi
+                                        credo sia il caso che io mi attivi per prenotare un posticino top che ci possa
+                                        ospitare! <br> <br>
+                                        <strong>Per questo ho bisogno di sapere se parteciperai o no</strong>, ti chiedo
+                                        di confermare la tua presenzaentro il 7 Dicembre! <br> <br>
+                                        Se hai qualche domanda mi raccomando, non farti problemi: rispondi pure a questa
+                                        mail, chiedi nel gruppo Facebook oppure nel gruppo <a
+                                            href="https://t.me/+SORLevij4iY5YTZk">Telegram</a>!
                                     </p>
                                 </div>
                             </td>
@@ -128,70 +144,67 @@
                                 <div style="width: 80%; margin: auto">
                                     <h2 style="text-align: center;">Bonus Newsletter</h2>
                                     <p
-                                        style="line-height: 1.5; text-align: justify; font-size: 14px; font-weight: 200;">
+                                        style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
                                         Facebook ha problemi di notifiche, lo sappiamo, non sempre sul gruppo i post
                                         che faccio vengono visti da tutti, ho deciso quindi di fare questo esperimento:
-                                        una Newsletter personalizzata per i partecipanti al gruppo, e per ringraziarti
+                                        una Newsletter personalizzata per i partecipanti al gruppo. <br> <br> Per ringraziarti
                                         della tua partecipazione a questa newsletter, che banalmente comporta
-                                        leggerla, ho deciso che metterò sempre una pillola in più rispetto al post su
-                                        facebook! 💊 </p>
+                                        leggerla, <strong>
+                                            ho deciso che metterò sempre una pillola in più rispetto al post su
+                                            facebook!
+                                        </strong> 💊 </p>
                                     <p
-                                        style="line-height: 1.5; text-align: justify; font-size: 14px; font-weight: 200;">
+                                        style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
                                         <br>
                                         Sulla falsa riga della pillola precedente, nella quale abbiamo parlato di come
                                         servano le iterazioni per arrivare ad un buon prodotto, in quella di oggi voglio
                                         dirti che ti stai concentrando sulla cosa sbagliata!
                                     </p>
 
-                                    <p style="line-height: 1.5; text-align: center; font-size: 14px; font-weight: 200;">
+                                    <p style="line-height: 1.5; text-align: center; font-size: 16px; font-weight: 300;">
                                         <em>
 
-                                            Vuoi creare o fare qualcosa, hai tutte le migliori intenzioni del mondo,
-                                            però pensi a cosa fare dopo, a come promuoverlo, a come potrebbe venire e
-                                            alla fine succede che oggi non è mai il giorno in cui crerai o farai quella
-                                            cosa </em>
+                                            Vuoi creare o fare qualcosa, hai tutte le migliori intenzioni del mondo, però pensi a cosa fare dopo, a come promuoverlo, a come potrebbe venire e alla fine succede che oggi non è mai il giorno in cui creerai o farai quella cosa </em>
                                     </p>
                                     <p
-                                        style="line-height: 1.5; text-align: justify; font-size: 14px; font-weight: 200;">
-                                        Se questo scenario ti suona familare questa pillola fa al caso tuo, infatti ora
-                                        ti spiego come potrai superare questo stallo:
+                                        style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
+                                        Se questo scenario ti suona familiare, questa pillola fa al caso tuo. Infatti ora ti condivido come potresti superare questo stallo:
                                     </p>
 
                                     <img src="https://i.ibb.co/tbrMJwp/E-Yw3xr-XIAUZJ6-S.jpg" alt="" width="600"
                                         style="border: 0; max-width: 100%;">
 
                                     <p
-                                        style="line-height: 1.5; text-align: justify; font-size: 14px; font-weight: 200;">
+                                        style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
                                         Questa immagine di <a
                                             href="https://twitter.com/slwindhausen?s=20">@slwindhausen</a> e <a
                                             href="https://twitter.com/IAmAndrewKirby?s=20">@IAmAndrewKirby</a> è la
-                                        perfetta rappresentazione di ciò contro cui stai combattendo: <br>
+                                        perfetta rappresentazione di ciò contro cui stai combattendo: <br> <br>
                                         Ci sono 100 scalini ed ogni scalino ha bisogno di una risposta per passare al
-                                        successivo, <br>
-                                        ti concentri sugli scalini che vanno dal 2 al 100, <br> non conosci le risposte,
-                                        <br>
-                                        quindi non parti. <br> Mai.
+                                        successivo, ti concentri sugli scalini che vanno dal 2 al 100. <br> <br> Non conosci le risposte.
+                                        <br> <br>
+                                        Qindi non parti. <br> <br> Mai.
                                     </p>
 
                                     <p
-                                        style="line-height: 1.5; text-align: justify; font-size: 14px; font-weight: 200;">
+                                        style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
                                         Non lasciarti fregare da quello che potresti fare, da come potrebbe essere, dai
-                                        se e dai ma. Pensa solo al primo scalino che ti separa dal compiere quello che
-                                        vorresti fare o creare. <br>
-                                        Ti va una sfida? Bene, quale è il social dal quale consumi più contenuti? Passi
-                                        le ore a vedere video su youtube? A leggere blog o libri? A scorrere tweet?
-                                        Qualsiasi sia la tua fonte di contenuti preferita va bene, basta che tu crei un
-                                        contenuto per quella piattaforma. <br>
+                                        se e dai ma. <strong>
+                                            Pensa solo al primo scalino che ti separa dal compiere quello che
+                                            vorresti fare o creare.
+                                        </strong> <br> <br>
+                                        Ti va una sfida? 🏅 <br> <br> Bene, quale è il social dal quale consumi più contenuti? Qualsiasi sia la tua fonte di contenuti preferita va bene, basta che tu crei un contenuto per quella piattaforma.  <br> <br>
                                         <em>Hai tempo fino alla prossima settimana</em>, poi pubblicheremo tutti i
-                                        nostri risultati nel gruppo facebook e ci confronteremo! Concludo con un esempio
+                                        nostri risultati nel gruppo facebook e ci confronteremo! <br> <br>
+                                        Concludo con un esempio
                                         per chiarezza: io passo ore del mio tempo libero a guardare video su youtube, è
                                         da li che imparo e mi diverto imparando cose, quindi per sabato prossimo creerò
-                                        un video. Tu cosa creerai? Spero di scoprirlo sabato!
+                                        un video. <br> <br> <em>Tu cosa creerai? Spero di scoprirlo sabato!</em>
                                     </p>
 
                                     <p
-                                        style="line-height: 1.5; text-align: center; font-size: 14px; font-weight: 200; margin-top: 10%; margin-bottom: 7%">
-                                        Per questa mail è tutto, ci sentiamo sui nostri canali social <br>
+                                        style="line-height: 1.5; text-align: center; font-size: 16px; font-weight: 300; margin-top: 10%; margin-bottom: 7%">
+                                        Per questa mail è tutto, ci sentiamo sui nostri canali social <br> <br>
                                         ad Maiora 🌐
                                     </p>
                                 </div>
