--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </tr>
                         <tr>
                             <td style="margin: 0; padding: 20px 0px;">
-                                <img src="https://i.ibb.co/16h4Pc8/My-Post-2.png" alt="" width="600"
+                                <img src="https://i.ibb.co/VjLW2g4/My-Post-3.png" alt="" width="600"
                                     style="border: 0; max-width: 100%;">
                             </td>
                         </tr>
@@ -61,7 +61,7 @@
                             <td style="padding: 0; margin: 0;">
                                 <div style="width: 80%; margin: auto">
                                     <p
-                                        style="line-height: 1.5; text-align: justify; font-size: 18px; font-weight: 300;">
+                                        style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
 
                                         Ciao! Io sono Paolo il tuo Local Ambassador e questa è la consueta mail
                                         settimanale in cui troverai riassunte tutte le novità di Start2Impact - Toscana,
@@ -73,67 +73,73 @@
                         <tr>
                             <td style="padding: 0; margin: 0;">
                                 <div style="width: 80%; margin: auto">
-                                    <h2 style="text-align: center;">Natale si avvicina oh oh oh! 🎅🏼
+                                    <h2 style="text-align: center;">Secret Santa 🎅🏼
                                     </h2>
                                     <p
                                         style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
-                                        E col natale si avvicina anche il nostro Meetup a tema Natalizio!</p>
+                                        Ci siamo!</p>
                                     <p
                                         style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
-                                        Non sai cos’è? Nessun problema, ci penso io!</p>
+                                        il 7 Dicembre sono stati sorteggiati i nomi per il nostro <strong>Secret
+                                            Santa!</strong></p>
                                     <p
                                         style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
-                                        <strong>Per il 18 Dicembre è previsto un meetup a tema natalizio</strong> che
-                                        ogni regione organizzerà in concomitanza con le altre! Saremo quindi tutti
-                                        insieme a festeggiare il Natale! 🎄 <br> Inoltre c’è anche un piccolo gioco, il
-                                        <strong>Secret Santa</strong>, un modo molto <em>ganzo</em> di augurarci il natale.
+                                        Infatti puoi già andare su Elfster e vedere a chi puoi fare il
+                                        <strong>regalo!</strong>
+                                        E il 18 Dicembre durante il meetup ce li scambieremo! Come? <br> <br> Non sai
+                                        che regalo fare? <br> <br>
+                                        Ecco alcuni piccoli consigli:
                                     </p>
 
                                     <p
                                         style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300; margin-top: 5%;">
-
-                                        Alessandro sul gruppo premium ha fatto un <a
-                                            href="https://www.facebook.com/groups/start2impact.premium.community/permalink/4755461304513660/">post
-                                            a
-                                            riguardo</a>! Ti consiglio di
-                                        andarlo a leggere! </p>
-
-                                    <p
-                                        style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
-                                        Ti va di partecipare? Ottimo!</p>
-
-
-                                    <p
-                                        style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
-                                        Allora qui puoi
-                                        trovare <a
-                                            href="https://www.facebook.com/groups/720819781768640/permalink/1305834613267151/">il
-                                            post con tutte le istruzioni</a> da
-                                        seguire per partecipare! <br> <br>
-                                        <em>Ah, ti ricordo che puoi venire accompagnato!</em> <br> <br> Se ti va puoi
-                                        portare una persona con te
-                                        così da fargli vedere cosa si perde a non partecipare attivamente a Start2Impact
-                                        😌 <br> <br> Sicuramente, oltre che a fare festa <em>(come sempre, ma sta volta
-                                            di
-                                            più!)</em>, al
-                                        Meetup avremo modo di confrontarci! <br> <br> Non abbiamo ancora un tema preciso, quindi
-                                        se hai delle preferenze o ti va di proporre qualcosa fammelo sapere, qui per
-                                        mail o nei commenti del post riassuntivo sul <a
-                                            href="https://www.facebook.com/groups/720819781768640">gruppo
-                                            regionale</a>!
+                                        Partiamo col dire che il <strong>budget fissato</strong> è di
+                                        <strong>15€</strong>, <br> è il gesto che conta di più, il gesto di fare il
+                                        regalo ad una persona che non consci ma che come te <strong>appartiene alla
+                                            Community</strong> di Start2Impact!
                                     </p>
 
                                     <p
                                         style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
-                                        Ultima cosa: con tutta probabilità molti di noi rimarranno in quel di Firenze a
-                                        <strong>cena dopo il Meetup</strong> e c’è nell’aria di fare anche un cenone
-                                        tutti insieme! <br> <br> Però <strong>potremmo essere in tanti</strong>, quindi
-                                        credo sia il caso che io mi attivi per prenotare un posticino top che ci possa
-                                        ospitare! <br> <br>
-                                        <strong>Per questo ho bisogno di sapere se parteciperai o no</strong>, ti chiedo
-                                        di confermare la tua presenzaentro il 7 Dicembre! <br> <br>
-                                        Se hai qualche domanda mi raccomando, non farti problemi: rispondi pure a questa
-                                        mail, chiedi nel gruppo Facebook oppure nel gruppo <a
+                                        Quindi non preoccuparti troppo di cosa regalerai, preoccupati di mettere il
+                                        cuore in quel piccolo pensiero! 🎁 ❤️ </p>
+
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="padding: 0; margin: 0;">
+                                <div style="width: 80%; margin: auto">
+                                    <h2 style="text-align: center;">Meetup📚 e Cena🍝</h2>
+                                    <p
+                                        style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
+                                        <strong>Il Meetup!</strong> <br>
+                                        Allora l'orario è il solito: <strong>17-19 a Firenze!</strong> In programma
+                                        abbiamo deciso di non
+                                        mettere niente di specifico data la particolarità di questo meetup! <br> <br>
+                                        Ci sarà sicuramente modo di scambiarsi <strong>idee, conoscenze e quattro
+                                            chiacchere</strong> 😎 <br> <br>
+                                        Quindi se hai domande o curiosità portatele dietro che potremmo partire proprio
+                                        da quelle! 📚 <br> <br>
+                                        Il luogo è ancora <strong>un mistero</strong>, ma lo sarà ancora per poco, vuole
+                                        essere una
+                                        sorpresa? <br> No, semplicemente c'è stato un fraintendimento e al momento
+                                        stiamo
+                                        decidendo quale posto sia megliore per passare un paio d'ore in tranquillità! 🚀
+                                        <br> <br>
+                                        Ed anzi! Se hai delle idee condividile pure che le terremo sicuramente in
+                                        considerazione! <br> <br>
+                                        <strong>La Cena!</strong> 🍝 <br>
+                                        Come di consueto abbiamo deciso di organizzare una cena post Meetup!<br> <br>
+                                        Qui il luogo lo sappiamo già, dobbiamo solo prenotare: <strong>La Trattoria
+                                            Verdi!</strong> <br>
+                                        Ci siamo stati dopo il meetup di Novembre e siamo rimasti piacevolmente
+                                        sorpresi, abbiamo deciso quindi che ritorneremo li! <br>
+                                        <strong>Prenoteremo a brevissimo</strong> quindi se ancora non hai deciso se
+                                        rimarrai a cena
+                                        oppure no, è il momento di farlo! 😎 <br> <br> Rispondimi a questa mail, sul <a
+                                            href="https://www.facebook.com/groups/720819781768640">gruppo
+                                            regionale</a> oppure sul gruppo <a
                                             href="https://t.me/+SORLevij4iY5YTZk">Telegram</a>!
                                     </p>
                                 </div>
@@ -142,12 +148,27 @@
                         <tr>
                             <td style="padding: 0; margin: 0;">
                                 <div style="width: 80%; margin: auto">
-                                    <h2 style="text-align: center;">Bonus Newsletter</h2>
+                                    <h2 style="text-align: center;">Passaggi 🚗💨</h2>
+                                    <p
+                                        style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
+                                        Alcuni di noi vengono con le macchine, se ti fa piacere o può tornarti utile
+                                        possiamo tranquillamente organizzarci, o sul <a
+                                            href="https://www.facebook.com/groups/720819781768640">gruppo Facebook</a> o
+                                        sul gruppo <a href="https://t.me/+SORLevij4iY5YTZk">Telegram</a>!
+                                    </p>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="padding: 0; margin: 0;">
+                                <div style="width: 80%; margin: auto">
+                                    <h2 style="text-align: center;">Pillola 💊</h2>
                                     <p
                                         style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
                                         Facebook ha problemi di notifiche, lo sappiamo, non sempre sul gruppo i post
                                         che faccio vengono visti da tutti, ho deciso quindi di fare questo esperimento:
-                                        una Newsletter personalizzata per i partecipanti al gruppo. <br> <br> Per ringraziarti
+                                        una Newsletter personalizzata per i partecipanti al gruppo. <br> <br> Per
+                                        ringraziarti
                                         della tua partecipazione a questa newsletter, che banalmente comporta
                                         leggerla, <strong>
                                             ho deciso che metterò sempre una pillola in più rispetto al post su
@@ -155,58 +176,11 @@
                                         </strong> 💊 </p>
                                     <p
                                         style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
-                                        <br>
-                                        Sulla falsa riga della pillola precedente, nella quale abbiamo parlato di come
-                                        servano le iterazioni per arrivare ad un buon prodotto, in quella di oggi voglio
-                                        dirti che ti stai concentrando sulla cosa sbagliata!
-                                    </p>
-
-                                    <p style="line-height: 1.5; text-align: center; font-size: 16px; font-weight: 300;">
-                                        <em>
-
-                                            Vuoi creare o fare qualcosa, hai tutte le migliori intenzioni del mondo, però pensi a cosa fare dopo, a come promuoverlo, a come potrebbe venire e alla fine succede che oggi non è mai il giorno in cui creerai o farai quella cosa </em>
-                                    </p>
-                                    <p
-                                        style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
-                                        Se questo scenario ti suona familiare, questa pillola fa al caso tuo. Infatti ora ti condivido come potresti superare questo stallo:
-                                    </p>
-
-                                    <img src="https://i.ibb.co/tbrMJwp/E-Yw3xr-XIAUZJ6-S.jpg" alt="" width="600"
-                                        style="border: 0; max-width: 100%;">
-
-                                    <p
-                                        style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
-                                        Questa immagine di <a
-                                            href="https://twitter.com/slwindhausen?s=20">@slwindhausen</a> e <a
-                                            href="https://twitter.com/IAmAndrewKirby?s=20">@IAmAndrewKirby</a> è la
-                                        perfetta rappresentazione di ciò contro cui stai combattendo: <br> <br>
-                                        Ci sono 100 scalini ed ogni scalino ha bisogno di una risposta per passare al
-                                        successivo, ti concentri sugli scalini che vanno dal 2 al 100. <br> <br> Non conosci le risposte.
-                                        <br> <br>
-                                        Qindi non parti. <br> <br> Mai.
-                                    </p>
-
-                                    <p
-                                        style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
-                                        Non lasciarti fregare da quello che potresti fare, da come potrebbe essere, dai
-                                        se e dai ma. <strong>
-                                            Pensa solo al primo scalino che ti separa dal compiere quello che
-                                            vorresti fare o creare.
-                                        </strong> <br> <br>
-                                        Ti va una sfida? 🏅 <br> <br> Bene, quale è il social dal quale consumi più contenuti? Qualsiasi sia la tua fonte di contenuti preferita va bene, basta che tu crei un contenuto per quella piattaforma.  <br> <br>
-                                        <em>Hai tempo fino alla prossima settimana</em>, poi pubblicheremo tutti i
-                                        nostri risultati nel gruppo facebook e ci confronteremo! <br> <br>
-                                        Concludo con un esempio
-                                        per chiarezza: io passo ore del mio tempo libero a guardare video su youtube, è
-                                        da li che imparo e mi diverto imparando cose, quindi per sabato prossimo creerò
-                                        un video. <br> <br> <em>Tu cosa creerai? Spero di scoprirlo sabato!</em>
-                                    </p>
-
-                                    <p
-                                        style="line-height: 1.5; text-align: center; font-size: 16px; font-weight: 300; margin-top: 10%; margin-bottom: 7%">
-                                        Per questa mail è tutto, ci sentiamo sui nostri canali social <br> <br>
-                                        ad Maiora 🌐
-                                    </p>
+                                        Questa volta la pillola se la godranno anche i non partecipanti alla newsletter! Eh si! <br> <br> 
+                                        Ti ricordi la <strong>challenge</strong> che ti ho proposto la settimana scorsa? <br> Quella in cui ti chiedevo di <strong>realizzare un contenuto</strong>? <br> <br>
+                                        Ecco nel mentre che ti sto scrivendo questa mali sto anche registrando un video in cui spiego quale è il mio Workflow per creare queste email! <br>
+                                        
+                                        Quindi ti lascio qui il link di YouTube del video! Ed anche il link ad un thread che ho fatto su twitter!</p>
                                 </div>
                             </td>
                         </tr>
