--- a/index.html
+++ b/index.html
@@ -176,11 +176,22 @@
                                         </strong> 💊 </p>
                                     <p
                                         style="line-height: 1.5; text-align: justify; font-size: 16px; font-weight: 300;">
-                                        Questa volta la pillola se la godranno anche i non partecipanti alla newsletter! Eh si! <br> <br> 
                                         Ti ricordi la <strong>challenge</strong> che ti ho proposto la settimana scorsa? <br> Quella in cui ti chiedevo di <strong>realizzare un contenuto</strong>? <br> <br>
-                                        Ecco nel mentre che ti sto scrivendo questa mali sto anche registrando un video in cui spiego quale è il mio Workflow per creare queste email! <br>
-                                        
-                                        Quindi ti lascio qui il link di YouTube del video! Ed anche il link ad un thread che ho fatto su twitter!</p>
+                                        Ecco nel mentre che ti sto scrivendo questa mali sto anche registrando un video in cui spiego quale è il mio Workflow per creare queste email! <br> <br>
+                                        Però non ti condividerò <strong>questo video</strong> 😛 <br> <br>
+                                        Mi sono reso infatti conto che una live potrebbe essere uno medium più adeguato e che mi sto attrezzando per proporla! Così oltre che a farti vedere la creazione di un template in html potremmo discutere di Email Marketing 📧 📹<br> <br>
+                                        Quindi ti lascio con la challenge persa? Ovvio Che No! <br> <br>
+                                        Preso da un libro che sto leggendo e da un video che ho visto ho deciso di scrivere il mio primo <a href="https://twitter.com/PabloMicheletti/status/1467494366075924485?s=20">Thread di Twitter</a>! <br> <br> 
+                                        Se non utilizzi Twitter 🐦 ti lascio un link che ti spiegherà perfettamente
+                                        <a href="https://www.podia.com/articles/twitter-threads">cosa sono i thread</a>, come si fanno e come mai portano vantaggi a chi li scrive! <br> <br>
+                                        Spero che questo picccolo esperimento ti abbia ispirato nel provare a creare un contenuto, se lo hai fatto condividmelo che sono curiosissimo!
+                                    </p>
+
+                                    <p
+                                        style="line-height: 1.5; text-align: center; font-size: 16px; font-weight: 300; margin-top: 10%; margin-bottom: 7%">
+                                        Per questa mail è tutto, ci sentiamo sui nostri canali social <br>
+                                        ad Maiora 🌐
+                                    </p>
                                 </div>
                             </td>
                         </tr>
